--- a/src/css/style.css
+++ b/src/css/style.css
@@ -82,7 +82,7 @@ p {
 .avatar {
   border-radius: 50%;
   border-width: 2.7px;
-  /* border-style: dashed; */
+  border-style: dashed;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -90,7 +90,7 @@ p {
 }
 
 .container-fluid {
-  /* border-style: dashed; */
+  border-style: dashed;
   color: #646363;
   background-color: #fff;
   padding: 5%;
